Using new everrest & tomcat8

--- a/plugin-datasource/che-plugin-datasource-server/pom.xml
+++ b/plugin-datasource/che-plugin-datasource-server/pom.xml
@@ -22,6 +22,11 @@
     <name>Che Plugin :: Datasource :: Server</name>
     <dependencies>
         <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${commons-codec.version}</version>
+        </dependency>
+        <dependency>
             <groupId>net.sf.opencsv</groupId>
             <artifactId>opencsv</artifactId>
             <version>${net.sf.opencsv.version}</version>
