Set websocket-api dependency as provided

--- a/plugin-java/che-plugin-java-ext-debugger-java/pom.xml
+++ b/plugin-java/che-plugin-java-ext-debugger-java/pom.xml
@@ -121,6 +121,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>javax.websocket</groupId>
+            <artifactId>javax.websocket-api</artifactId>
+            <version>${javax.websocket.api.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>sun.jdt</groupId>
             <artifactId>tools</artifactId>
             <version>${java.vm.version}</version>
