--- a/plugin-machine/che-plugin-machine-ext-client/src/main/resources/org/eclipse/che/ide/extension/machine/client/MachineLocalizationConstant.properties
+++ b/plugin-machine/che-plugin-machine-ext-client/src/main/resources/org/eclipse/che/ide/extension/machine/client/MachineLocalizationConstant.properties
@@ -93,7 +93,7 @@ tab.server=Server
 info.name=Name:
 info.machine.id=Machine Id:
 info.owner=Owner:
-info.state=State:
+info.status=Status:
 info.type=Type:
 info.ws.bound=WsBound:
 info.ws.id=Workspace Name:
